when I have some more ideas.

The only solution is to remap the keyboard using xmodmaps and/or mapping for
special characters using the Map Keys dialog.  I do not like this at all and is
a huge hack for linux.  If you do not believe me take a look at the Java Bug
Database for all the problems with this in linux.

Enhancements/Change Log
-----------------------
04/08/2002  Added to send via e-mail where if the smtp configuration file
            already exists then the option will read edit config instead of
            always config

            Added ability to list scripts on the macros menu from scripts 
            directory only
            
03/08/2002  Added new categories to the session attributes screen:
               Cursor - Moved from display cat and added Ruler follows cursor
               Signoff - not implemented yet
               On Connect - added support to run a macro on connect
               Mouse - added double click send enter
               
            Fixed another problem with keybuffering hopefully the null as well

02/08/2002  Fixed a problem with the keybuffering where when there is an error
            it will clear the buffer and lock the keyboard.

31/07/2002  Fixed a problem with gui windows not restoring the screen correctly.

            Added support for multiple macros running at the same time for
            different sessions.

30/07/2002  Fixed a problem with error line again.

27/07/2002  Added scripting to emulator using jython.  We now have scripting!!!

25/07/2002  Add the macros in ascending order.  This and the session sorting
            have been needed for a long time.  Thanks Roy for the request.

            Added new italian translations from Maurizio.  Thanks

24/07/2002  Added a sorted session table to the connection screen.

23/07/2002  Added all predefined short cuts to a short cuts menu off of the
            keyboard menu item.

22/07/2002  Added changes from Maurizio to add an all-dep build target to the